[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game/Script/fWeapon/gDamgeText.gd" type="Script" id=1]
[ext_resource path="res://Game/Font/cn_.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "dmg_text"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( -0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -120 ) ]
}

[node name="dmg_text" type="Node2D"]
modulate = Color( 1, 1, 1, 0.7 )
scale = Vector2( 0.5, 0.5 )
z_index = 5
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Control" type="Control" parent="."]
margin_top = -60.0
margin_right = 40.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dmgLable" type="RichTextLabel" parent="Control"]
margin_left = -4.0
margin_right = 100.0
margin_bottom = 60.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "111"
text = "111"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dmg_text = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
